<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_mdf"
		android:title="@string/mdf_header"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_arrow"
		android:title="@string/arrow_header"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_developer"
		android:title="@string/developer"
		app:showAsAction="collapseActionView" />


	<item
		android:id="@+id/menu_bt"
		android:icon="@drawable/d_bt_off"
		android:title="@string/bt_header"
		app:showAsAction="always">

		<menu>
			<item
				android:id="@+id/menu_bt_on"
				android:title="@string/_turnon" />
			<item
				android:id="@+id/menu_bt_off"
				android:title="@string/_turnoff" />
			<item
				android:id="@+id/menu_bt_find"
				android:title="@string/bt_find" />
			<item
				android:id="@+id/menu_bt_reconnect"
				android:title="@string/bt_reconnect" />
		</menu>
	</item>
</menu>